--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ilastik"]
 	path = ilastik
-	url = git://github.com/holstgr-kaust/ilastik
+	url = ssh://git@github.com/holstgr-kaust/ilastik
 [submodule "volumina"]
 	path = volumina
-	url = git://github.com/holstgr-kaust/volumina
+	url = ssh://git@github.com/holstgr-kaust/volumina
 [submodule "lazyflow"]
 	path = lazyflow
-	url = git://github.com/holstgr-kaust/lazyflow
+	url = ssh://git@github.com/holstgr-kaust/lazyflow
